# cpp-string-template

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: gen-docs.yml  linux-build.yml
examples/: quick_example.cpp
include/: CMakeLists.txt
include/strtpl/: regex.hpp  string_template.hpp  trailing_view.hpp
include/tpl/: string_template.hpp
tests/: CMakeLists.txt
tests/main/: CMakeLists.txt  main.cpp
tests/regex/: CMakeLists.txt  regex.cpp
tests/string_template/: CMakeLists.txt  string_template.cpp
tests/trailing_view/: CMakeLists.txt  trailing_view.cpp
